commit 1/17/15